ad vieset and router

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    hola mundo
+<body style="display: flex; justify-content: center; align-items: center; height: 100vh; flex-direction: column;">
+    <p>hola mundo</p>
+    <h1 style="color:blue">y ahora que hago?</h1>
+
+    <br>
+    <br>
+    <h3 >hola mami</h3>
 </body>
 </html>
